commafeed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commafeed-svc
  namespace: commafeed
  labels:
    app: commafeed
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8082
      targetPort: 8082
      protocol: TCP
  selector:
    app: commafeed
