commafeed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commafeed-ingerss
  namespace: commafeed
spec:
  rules:
  - host: commafeed.tuunikala.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: commafeed-svc
            port:
              number: 8082
