commafeed/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailscale-ingerss
  namespace: commafeed
spec:
  ingressClassName: tailscale
  rules:
  - host: commafeed.buri-corn.ts.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: commafeed-svc
            port:
              number: 8082
